--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-import pandas as pd
-from sklearn.model_selection import train_test_split
-from sklearn.neighbors import KNeighborsClassifier
-from sklearn.metrics import accuracy_score
+numpy==1.20.1
+streamlit==1.11.0
+pandas==1.2.3
+scikit-learn
