--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-numpy==1.20.1
-streamlit==1.11.0
-pandas==1.2.3
-scikit-learn==0.22.1
-pip install scikit-learn
+numpy
+streamlit
+pandas
+scikit-learn
